# gnome-shell-extension-sshsearch

./: README.md  autogen.sh
src/: Makefile.am  com.github.brot.sshsearch.gschema.xml.in  extension.js  metadata.json.in
ssh-search-provider@gnome-shell-extensions.brot.github.com/: extension.js  metadata.json
